# monkeytyper

./: CMakeLists.txt  DisplayObject.cpp  DisplayObject.h  GameState.h  README.md  UserText.cpp  UserText.h  Word.cpp  Word.h  main.cpp
assets/: quicksave.txt  scores.txt  wordlist.txt
